tests/src/frontend/typechecking/invalid/tparam_super15.sk
trait MyOrderable {
  readonly fun compare(inst): Order;
}

class Cont<T>(x: T) {
  fun get(): T {
    this.x
  }

  fun compareit<V, V2: MyOrderable>[T: V & V2](x: V): Order {
    this.get().compare(x)
  }
}
